--- a/Resources/i18n/he.json
+++ b/Resources/i18n/he.json
@@ -25,7 +25,7 @@
       "login":"מתחבר...",
       "upload":"מעלה דמות...",
       "loginFail":"התחברות נכשלה",
-      "serverFail":"Could not reach",
+      "serverFail":"לא ניתן להתחבר",
       "uploadFail":"העלאה נכשלה",
       "challengeFail":"אתגר נכשל",
       "success":"העלאה הושלמה!"
@@ -33,15 +33,15 @@
     "skinUpload":{
       "confirm":{
         "title":"החלף דמות?",
-        "message":"האם את\/ה באמת רוצה להחליף את הדמות שלך עם \"%s\"?",
+        "message":"האם את\/ה באמת רוצה להחליף את הדמות עם \"%s\"?",
         "cancel":"לא",
         "okay":"כן"
       },
       "error":{
         "title":"שגיאה בהעלאה",
         "login":"אין אפשרות להתחבר לminecraft.net. בבקשה תבדוק את פרטי ההתחברות שלך בהגדרות.",
-        "server":"לא יכול היה להגיע minecraft.net. האתר עשוי להיות למטה. בדוק http:\/\/help.mojang.com ונסה שוב מאוחר יותר.",
-        "upload":"לא הצלחנו להעלות את הדמות ל- minecraft.net בבקשה נסה מאוחר יותר.",
+        "server":"לא יכול היה להגיע minecraft.net. יכול להיות שהאתר נפל. בדוק http:\/\/help.mojang.com ונסה שוב מאוחר ",
+        "upload":"לא הצלחנו להעלות את הדמות ל- minecraft.net בבקשה נסה שוב מאוחר יותר.",
         "challenge":"את\/ה נדרש\/ת לענות על שאלת אבטחה כדי לגשת לחשבונך מהמכשיר הזה.\nלמרבה הצער, אנחנו לא יכולים לטעון אותה. בבקשה בדוק את החיבור שלך ונסה מאוחר יותר."
       }
     }
@@ -53,14 +53,14 @@
     "header":"אישורי כניסה מ minecraft.net",
     "footer":{
       "migratedAccount":"אם המשתמש שלך שולב עם משתמש mojang, עליך להשתמש בכתובת האימייל במקום שם המשתמש של מיינקראפט.",
-      "privacy":"הערה: אנחנו לעולם לא נשמור או נשתמש בפרטים שלך בשביל שום דבר אחר חוץ מלהחליף דמויות  המיינקראפט שלך. פרטי החשבון שלך שמורים בבטחה בתוך הIOS."
+      "privacy":"הערה: אנחנו לעולם לא נשמור או נשתמש בפרטים שלך בשביל שום דבר אחר חוץ מלהחליף את דמויות המיינקראפט שלך. פרטי החשבון שלך שמורים בבטחה בתוך הIOS."
     }
   },
   "addProcess":{
     "skinInfo":{
       "title":"מידע על הדמות",
       "shortTitle":"פרטי הדמות",
-      "name":"שם הדמות",
+      "name":"או כתוב את כתובת הURL של הדמות (חייב להיות קובץ PNG):",
       "nameHint":"הדמות האדירה שלי",
       "description":"תיאור",
       "method":{
@@ -93,26 +93,26 @@
       "progress":{
         "initial":"Reticulating Splines...",
         "skin":"מוריד דמות...",
-        "preview":"מוריד תצוגה מקדימה של דמות...",
-        "database":"רושם דמות למרכז מידע...",
-        "success":"הוסף בהצלחה את הדמות! :)",
+        "preview":"מוריד תצוגה מקדימה של הדמות...",
+        "database":"רושם דמות למאגר מידע...",
+        "success":"הדמות נוספה בהצלחה! :)",
         "fail":"נכשל :("
       },
       "error":{
-        "skin":"שגיעה בעת הורדת הדמות. מבטל.",
+        "skin":"שגיאה בעת הורדת הדמות. מבטל.",
         "preview":{
           "title":"שגיאת רשת",
-          "message":"שגיאה בעת הורדת התצוגה המקדימה. לא היה תצודה מקדימה לדמות. להמשיך בכל זאת?",
+          "message":"שגיאה בעת הורדת התצוגה המקדימה. לא היתה תצוגה מקדימה לדמות. להמשיך בכל זאת?",
           "cancel":"ביטול",
           "ok":"המשך"
         }
       },
       "challenge":{
-        "title":"אימות אישור",
+        "title":"אימות זהות",
         "help":"אתה צריך לענות על השאלה הזאת בגלל שאתה מנסה לגשת למשתמש mojang ממקום אחר.\nאם שכחת את הסיסמא, אתה יכול לנסות שאלה נוספת על ידי סגירת החלון ונסיון חוזר (זה אקראי).\nאם אתה לא מצליח להתחבר, בבקשה תבקר ב help.mojang.com בשביל הדרכה על איפוס השאלות.",
         "cancel":"ביטול",
         "continue":"המשך",
-        "hint":"ענה"
+        "hint":"תשובה"
       }
     },
     "next":"הבא"
