--- a/Resources/i18n/it.json
+++ b/Resources/i18n/it.json
@@ -11,9 +11,9 @@
       "close":"Chiudere"
     },
     "noSelectedSkin":"Nessuno skin selezionato.",
-    "search":"Search in your skins...",
+    "search":"Cerca nelle tue pelli",
     "tips":{
-      "wear":"Protip: To wear a skin, tap and hold its icon!"
+      "wear":"Protip: Indossare una pelle, toccare e tenere premuto l'icona!"
     },
     "skinDelete":{
       "title":"Confermare la soppressione",
