--- a/platform/iphone/Settings.bundle/fr.lproj/Root.strings
+++ b/platform/iphone/Settings.bundle/fr.lproj/Root.strings
@@ -1,16 +1,16 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>orderSkinsBy</key>
-	<string>Trier les skins par</string>
-	<key>name</key>
-	<string>Nom</string>
-	<key>date</key>
-	<string>Date d'ajout</string>
+  <dict>
+    <key>orderSkinsBy</key>
+    <string>Trier les skins par</string>
+    <key>name</key>
+    <string>Nom</string>
+    <key>date</key>
+    <string>Date d'ajout</string>
     <key>icloud</key>
     <string>Sync. iCloud</string>
     <key>forceEn</key>
     <string>Force English</string>
-</dict>
+  </dict>
 </plist>
