--- a/platform/iphone/Settings.bundle/nl.lproj/Root.strings
+++ b/platform/iphone/Settings.bundle/nl.lproj/Root.strings
@@ -7,7 +7,7 @@
     <key>name</key>
     <string>Name</string>
     <key>date</key>
-    <string>Date of Creation</string>
+    <string>Aanmaak Datum</string>
     <key>icloud</key>
     <string>Sync to iCloud</string>
     <key>forceEn</key>
